--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  # To generate to/from JSON code for a class, annotate it with @JsonSerializable.
+  json_serializable: ^3.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # The build_runner package provides a concrete way of generating files using Dart code.
+  build_runner: ^1.10.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
